--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ BASE_URL="https://omnichannel.qiscus.com"
 TASK_QUEUE_KEY="TASK_QUEUE"
 RESOLVE_QUEUE_KEY="RESOLVE_QUEUE"
 MAX_CUSTOMER=5
+REDIS_URL="rediss://default:AVITAAIjcDE4MTk2ZTAwNjk2Yjk0NWNkOTQ1MDI3MjhmMGM5NzI1Y3AxMA@glad-wahoo-21011.upstash.io:6379"
